gitops/infrastructure/networking/gateways/local-cluster-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local-cluster-gateway
  namespace: networking
spec:
  gatewayClassName: traefik

  listeners:
    - name: web
      hostname: "*.home"
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All

    - name: websecure
      hostname: "*.home"
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: local-home-tls
      allowedRoutes:
        namespaces:
          from: All
